2013-06-17  Ramon Casero  <rcasero@gmail.com>

	* matlab/ThirdPartyToolbox/dijkstra.m: (0.3.1)
	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.3.1)

	- Small clarification in the help header.

2013-06-15  Ramon Casero  <rcasero@gmail.com>

	* matlab/update_README.sh: (0.2.0)

	- Put the case loop outside, and then the loop for each file
	inside the particular cases. This allows us to use different find
	commands to list the files in each toolbox, suiting the different
	conventions of third party toolboxes.

	* matlab/add_gerardus_paths.m: (0.1.3)

	- Correct the paths to the Spharm toolbox.

	* matlab/add_gerardus_paths.m: (0.1.2)

	- Add paths to iso2mesh and Spharm toolboxes.

	* matlab/update_README.sh: (0.1.4)

	- Add special rule for third-party Spharm Toolbox.

	* Add matlab/ThirdPartyToolbox/SpharmToolbox: (1.0.0)

	- Fix bugs. Mostly the syntax for fileparts() with 4 output
	arguments is not valid, at least on Matlab 2012a for linux.

	- From the Li Shen Laboratory, Indiana University. Downloaded from
	http://imaging.indyrad.iupui.edu/projects/SPHARM/SPHARM-pack/SPHARM-MAT-v1-0-0.tar.gz

2013-06-14  Ramon Casero  <rcasero@gmail.com>

	* matlab/update_README.sh: (0.1.3)

	- The iso2mesh Toolbox has a different convention for the help
	headers. It's easier to add a special case to this script than
	modifiying all the help headers in iso2mesh.

	* Add matlab/ThirdPartyToolbox/iso2meshToolbox:

	- Version 2013 beta. By Qianqian Fang and David Boas. Website
	http://iso2mesh.sourceforge.net/cgi-bin/index.cgi?Home.

	- Downloaded from
	http://sourceforge.net/projects/iso2mesh/?source=dlp

	* Add test_scimat_dmatrix_imgeodesic.m: (0.1.0)

	- With "Toy example, ellipsoidal shape in 2D", "3D example, rat
	left ventricle"

	* Add matlab/add_gerardus_paths.m: (0.1.1)

	- Fix bug. Argument checking in a script produces error.

	* Add matlab/add_gerardus_paths.m: (0.1.0)

	- Add all Gerardus toolboxes to the Matlab path.

	* Rename matlab/ThirdPartyToolbox/nifti as